@@ -1,3 +1,6 @@
+* Fri Aug 05 2016 Nick Markowski <nmarkowski@keywcorp.com> - 4.1.2-0
+- Updated the user_specification docs and spec.
+
 * Mon Jul 11 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.1-0
 - Migration to semantic versioning and fix of the build system
 
